# irzean

./: .gitignore  .woodpecker.yml  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
src/: err.rs  fossil.rs  main.rs  routes.rs  util.rs
src/routes/: templates.rs
src/util/: embed.rs  sitemap.rs  tokio_fs.rs
static/: main.scss
static/style/: error.scss  main.scss
templates/html/: error.jinja  footer.jinja  header.jinja  index.jinja  layout.jinja  list.jinja  search.jinja  tags.jinja  writing.jinja
